--- a/style CSS/syntax.css
+++ b/style CSS/syntax.css
@@ -1,40 +1,12 @@
-body {
-    background: gray
-}
-.glowny{
-width: 100%;
-max-width: 960px;
-margin: 0 auto
-
-}
-
-.flex-container {
+h1{font-size: 40px;
     display: flex;
-    background: white
-}
-.box {
+    justify-content: center
 
-    height: 100px;
-    min-width: 100px;
-        
+
 }
 
-.one {
-
-    background: red;
-}
-
-.two {
-
-    background: orange
-}
-
-.thre{
-
-    background: yellow
-}
-
-.for {
-background-color: blue
-
+.clas{
+    width: 100%;
+    height: 800px;
+    background: grey
 }
