--- a/style CSS/syntax.css
+++ b/style CSS/syntax.css
@@ -1,12 +1,31 @@
-h1{font-size: 40px;
+
+    
+h1{font-size: 40px; color: brown;
     display: flex;
-    justify-content: center
+    justify-content: center;
+    
 
 
 }
 
 .clas{
     width: 100%;
-    height: 800px;
-    background: grey
+    height: 400px;
+    background: grey;
+    margin: 0px 0px 30px 0px
+}
+
+.main {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+   
+
+
+}
+.booton {
+   
+    width: 600px;
+    height: 400px;
+    background: gray;
 }
