--- a/style CSS/syntax.css
+++ b/style CSS/syntax.css
@@ -8,24 +8,24 @@ h1{font-size: 40px; color: brown;
 
 }
 
-.clas{
+.boxy{
     width: 100%;
-    height: 400px;
     background: grey;
-    margin: 0px 0px 30px 0px
-}
-
-.main {
-    width: 100%;
-    display: flex;
+    display: flex; 
     justify-content: space-between;
-   
-
+    flex-shrink: 1;
 
 }
-.booton {
-   
-    width: 600px;
-    height: 400px;
-    background: gray;
+
+.small{
+
+    width: 200px;
+    height: 200px;
+    background: red;
+    margin: 30px;
+
+
+
+  
 }
+
