odkryłem czemu brakowało literki przy slowie class w kodzie html wdf 10 min pomyślunku

--- a/medium grid.css
+++ b/medium grid.css
@@ -19,8 +19,10 @@ h1{font-size: 40px; color: brown;
 
 .box2{
     width: 100%;
-    background: blue;
+    background: gray;
     display: flex;
+    align-items: stretch;
+    justify-content: space-between;
 
 
 }
