--- a/landing page.css
+++ b/landing page.css
@@ -1,9 +1,12 @@
     .navibar{
         width: 100%;
         height: 120px;
-        background: gray;
+        background: rgb(224, 172, 172);
         display: flex;
         justify-content: space-between;
+        border: 5px solid rgb(65, 57, 57);
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
        
     }
 
@@ -18,11 +21,12 @@
 
     .rightNavi{
         height: 80%;
-        width: 100%;
-        background: orange;
+        width: 50%;
         display: flex;
         justify-content: flex-end;
-        align-self: center
+        align-self: center;
+        justify-content: space-between;
+
 
     }
 
@@ -30,6 +34,7 @@
         height: 100%;
         width: 200px;
         border: 1px solid black;
+        background: orange
 
     }
 
