--- a/CSS Clip Path Property/css/main.css
+++ b/CSS Clip Path Property/css/main.css
@@ -1,1 +1,13 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+body {
+  background: #78e9ec;
+  margin: 0;
+  height: 100vh;
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+/*# sourceMappingURL=main.css.map */
