--- a/CSS Clip Path Property/css/main.scss
+++ b/CSS Clip Path Property/css/main.scss
@@ -1,9 +1,33 @@
 body{
-    background: rgb(120, 233, 236);
+    background: rgb(188, 253, 255);
     margin: 0;
     height: 100vh;
     display: grid;
     justify-items: center;
     align-items: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+
+.container{
+    width: 30%;
+    background: white;
+    border-radius: 10px;
+
+        .inner{
+            background: #00B6FF;
+            padding: 1em;
+            border-radius: 10px;
+            width:100%;
+
+
+            h1{
+                color:white;
+                margin: 0;
+            }
+
+            p{
+                color: white;
+                font-size: .9rem
+            }
+        }
 }
