--- a/CSS Clip Path Property/css/main.css
+++ b/CSS Clip Path Property/css/main.css
@@ -8,7 +8,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .container {
@@ -18,10 +18,16 @@ body {
 }
 
 .container .inner {
-  background: #00B6FF;
+  background: #00b6ff;
   padding: 1em;
   border-radius: 10px;
   width: 100%;
+  -webkit-clip-path: circle(10% at 0% 0%);
+          clip-path: circle(10% at 0% 0%);
+  -webkit-transition: -webkit-clip-path .5s ease-in-out;
+  transition: -webkit-clip-path .5s ease-in-out;
+  transition: clip-path .5s ease-in-out;
+  transition: clip-path .5s ease-in-out, -webkit-clip-path .5s ease-in-out;
 }
 
 .container .inner h1 {
@@ -31,6 +37,11 @@ body {
 
 .container .inner p {
   color: white;
-  font-size: .9rem;
+  font-size: 0.9rem;
+}
+
+.container:hover .inner {
+  -webkit-clip-path: circle(75%);
+          clip-path: circle(75%);
 }
 /*# sourceMappingURL=main.css.map */
