--- a/CSS Clip Path Property/css/main.scss
+++ b/CSS Clip Path Property/css/main.scss
@@ -1,33 +1,37 @@
-body{
-    background: rgb(188, 253, 255);
-    margin: 0;
-    height: 100vh;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+body {
+  background: rgb(188, 253, 255);
+  margin: 0;
+  height: 100vh;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.container{
-    width: 30%;
-    background: white;
+.container {
+  width: 30%;
+  background: white;
+  border-radius: 10px;
+
+  .inner {
+    background: #00b6ff;
+    padding: 1em;
     border-radius: 10px;
+    width: 100%;
+    clip-path: circle(10% at 0% 0%);
+    transition: clip-path .5s ease-in-out;
 
-        .inner{
-            background: #00B6FF;
-            padding: 1em;
-            border-radius: 10px;
-            width:100%;
+    h1 {
+      color: white;
+      margin: 0;
+    }
 
-
-            h1{
-                color:white;
-                margin: 0;
-            }
-
-            p{
-                color: white;
-                font-size: .9rem
-            }
-        }
+    p {
+      color: white;
+      font-size: 0.9rem;
+    }
+  }
+  &:hover .inner{
+    clip-path: circle(75%)  
+}
 }
