finisg efect two

--- a/CSS Clip Path Property/css/main.css
+++ b/CSS Clip Path Property/css/main.css
@@ -24,10 +24,10 @@ body {
   width: 100%;
   -webkit-clip-path: circle(10% at 0% 0%);
           clip-path: circle(10% at 0% 0%);
-  -webkit-transition: -webkit-clip-path .5s ease-in-out;
-  transition: -webkit-clip-path .5s ease-in-out;
-  transition: clip-path .5s ease-in-out;
-  transition: clip-path .5s ease-in-out, -webkit-clip-path .5s ease-in-out;
+  -webkit-transition: -webkit-clip-path 0.5s ease-in-out;
+  transition: -webkit-clip-path 0.5s ease-in-out;
+  transition: clip-path 0.5s ease-in-out;
+  transition: clip-path 0.5s ease-in-out, -webkit-clip-path 0.5s ease-in-out;
 }
 
 .container .inner h1 {
@@ -43,5 +43,48 @@ body {
 .container:hover .inner {
   -webkit-clip-path: circle(75%);
           clip-path: circle(75%);
+}
+
+.inner_Two {
+  background: #00ff80;
+  padding: 1em;
+  border-radius: 10px;
+  width: 250px;
+  -webkit-clip-path: circle(10% at 90% 20%);
+          clip-path: circle(10% at 90% 20%);
+  -webkit-transition: all clip-path .5s ease-in-out;
+  transition: all clip-path .5s ease-in-out;
+  cursor: pointer;
+}
+
+.inner_Two:hover {
+  -webkit-clip-path: circle(75%);
+          clip-path: circle(75%);
+  background: #00b6ff;
+}
+
+.inner_Two span {
+  float: right;
+  text-align: left;
+  color: white;
+  font-weight: bold;
+  -webkit-transition: color .5s;
+  transition: color .5s;
+  position: relative;
+  margin-right: 4%;
+}
+
+.inner_Two:hover span {
+  color: rgba(255, 255, 255, 0);
+}
+
+.inner_Two h1 {
+  color: white;
+  margin: 0;
+}
+
+.inner_Two p {
+  color: white;
+  font-size: 0.9rem;
 }
 /*# sourceMappingURL=main.css.map */
