--- a/CSS Clip Path Property/css/main.scss
+++ b/CSS Clip Path Property/css/main.scss
@@ -3,6 +3,7 @@ body {
   margin: 0;
   height: 100vh;
   display: grid;
+  grid-auto-rows: 1fr 1fr;
   justify-items: center;
   align-items: center;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
