--- a/CSS Clip Path Property/css/main.css
+++ b/CSS Clip Path Property/css/main.css
@@ -4,6 +4,7 @@ body {
   height: 100vh;
   display: -ms-grid;
   display: grid;
+  grid-auto-rows: 1fr 1fr;
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
